# template-repo

./: README.md  api.py  pyproject.toml  requirements.txt
node/: main.ts  package-lock.json  package.json  server.ts  tsconfig.json
python/: api.py  mcp_server.py
src/mcp_server/: server.py
