[project]
name = "mcp-server"
version = "0.1.0"
description = "An MCP server scaffold for lnar. Edit src/mcp_server/server.py to add your own @mcp.tool functions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.3",
    "uvicorn>=0.30",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
